feat: add check plugin must test just jar or war packaging types in target project